# Dynamical_LLM

./: .gitignore  BLOCKCHAIN_INFO.md  BLOCKCHAIN_INFO_EN.md  CONCEPT.md  EXPERIMENT_LOG.md  OFFLINE_PERSONAL_LLM_PLAYBOOK.md  README.md  README_EN.md  ROADMAP.md  SIGNATURE.sha256  SYSTEM_CONNECTION_MAP.md  USER_GUIDE.md  generate.py  pyproject.toml  train.py
dynllm/: __init__.py  diagnostics.py  distill_bridge.py  dynamics_core.py  evaluate.py  integrator.py  memory.py  memory_rank_adapter.py  model.py  personal_memory.py  readout.py  stability.py  state_encoder.py  system_bridge.py  tokenizer.py
examples/: run_dlm.py
scripts/: cleanup_generated.py  generate_signature.py  release_check.py  verify_package_identity.py  verify_signature.py
tests/: test_dynllm.py  test_package_integrity.py  test_smoke_entrypoints.py  test_system_bridge.py
