[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dynllm-foundation"
version = "0.5.0"
description = "Dynamical LLM Foundation — ODE state evolution, 4-tier memory, online adaptation, personal memory."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "GNJz / qquartsco-svg"}
]
dependencies = [
  "torch>=2.1"
]

[tool.setuptools]
packages = ["dynllm"]
